fixes mistakes div to the top of the window, so visible on scroll

--- a/typeracer.css
+++ b/typeracer.css
@@ -23,7 +23,10 @@ html {
   font-weight: normal;
   padding-left: 30px;
   float: left;
+  top: 30px;
+  position: fixed;
 }
+
 #missed-chars span {
   color: #e74c3c;
 }
